--- a/src/app/pages/doctor-details/doctor-details.css
+++ b/src/app/pages/doctor-details/doctor-details.css
@@ -52,8 +52,8 @@
 .book-package-form form textarea
 {
     padding: 15px;
-    font-size: 14px;
-    color: #676767;
+    font-size: 16px;
+    color: #0e0e0e;
     border: none;
     box-shadow: none;
     border: 1px solid #DDDDDD;
