--- a/src/app/pages/doctor-details/doctor-details.html
+++ b/src/app/pages/doctor-details/doctor-details.html
@@ -217,23 +217,20 @@
                                     </small>
                                 </div>
 
-                                <!-- Travel Assistance -->
-                                <div class="mb-2 form-check">
+                                <!-- <div class="mb-2 form-check">
                                     <input type="checkbox" class="form-check-input" id="travelConsultationCheck"
                                         formControlName="travel_assistant">
                                     <label class="form-check-label" for="travelConsultationCheck">
                                         Do You Need Travel Assistance?
                                     </label>
                                 </div>
-
-                                <!-- Stay Assistance -->
                                 <div class="mb-3 form-check">
                                     <input type="checkbox" class="form-check-input" id="stayConsultationCheck"
                                         formControlName="stay_assistant">
                                     <label class="form-check-label" for="stayConsultationCheck">
                                         Do You Need Stay Assistance?
                                     </label>
-                                </div>
+                                </div> -->
 
                                 <!-- Note -->
                                 <div class="package-book-note">
