--- a/src/app/pages/forgot-password/forgot-password.html
+++ b/src/app/pages/forgot-password/forgot-password.html
@@ -1,23 +1,23 @@
-<section class="inner-banner">
+<section class="inner-banner" *ngIf="banner">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="inner-baner-dtl position-relative text-center">
-                    <!-- Banner Image -->
-                    <img [src]="'assets/images/login.png'" class="w-100 img-fluid rounded-5" />
-                    <div class="inner-heading">
-                        <h2>Forgot Password</h2>
-                        <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
-                            <li><a routerLink="/">Login</a></li>
-                            <li><img [src]="'assets/images/breadcumb.svg'" /></li>
-                            <li><a routerLink="/">Forgot Password</a></li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="inner-baner-dtl position-relative text-center">
+            <img [src]="'http://165.22.223.163:8000' + banner.image_url" class="w-100 img-fluid rounded-5" />
+            <div class="inner-heading">
+              <h2>{{ banner.title }}</h2>
+              <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
+                <li><a routerLink="/">Home</a></li>
+                <li><img [src]="'assets/images/breadcumb.svg'" /></li>
+                <li><a routerLink="/forgot-password">{{ banner.title }}</a></li>
+              </ul>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</section>
+  </section>
+  
 <section class="contact-form login-form ptc-80">
     <div class="container">
         <div class="row">
@@ -29,12 +29,37 @@
                     <h5>Forgot Password</h5>
                     <p>Enter the email address or mobile number associated with your account.</p>
                     <div class="login-form">
-                        <form class="mt-0 w-100">
+                        <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" class="mt-0 w-100">
                             <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Email Address/Phone Number">
+                                <input 
+                                    type="email" 
+                                    class="form-control" 
+                                    placeholder="Email Address" 
+                                    formControlName="email"
+                                    [class.is-invalid]="forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched">
+                                <div class="invalid-feedback" *ngIf="forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched">
+                                    <small *ngIf="forgotPasswordForm.get('email')?.errors?.['required']">Email is required</small>
+                                    <small *ngIf="forgotPasswordForm.get('email')?.errors?.['email']">Please enter a valid email</small>
+                                </div>
+                            </div>
+                            <div class="mb-3" *ngIf="errorMessage">
+                                <div class="alert alert-danger">{{ errorMessage }}</div>
+                            </div>
+                            <div class="mb-3" *ngIf="successMessage">
+                                <div class="alert alert-success">{{ successMessage }}</div>
                             </div>
                             <div class="mb-3">
-                                <a href="#" class="btn-default">Get OTP <i class="fa-solid fa-arrow-up"></i></a>
+                                <button 
+                                    type="submit" 
+                                    class="btn-default w-100" 
+                                    [disabled]="forgotPasswordForm.invalid || isLoading">
+                                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm me-2"></span>
+                                    {{ isLoading ? 'Sending...' : 'Send Reset Link' }} 
+                                    <i class="fa-solid fa-arrow-up" *ngIf="!isLoading"></i>
+                                </button>
+                            </div>
+                            <div class="sing-option">
+                                <p class="mb-0">Remember your password? <a href="/login">Back to Login</a></p>
                             </div>
                         </form>
                     </div>
