--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,23 +1,23 @@
-<section class="inner-banner">
+<section class="inner-banner" *ngIf="banner">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="inner-baner-dtl position-relative text-center">
-                    <!-- Banner Image -->
-                    <img [src]="'assets/images/about.png'" class="w-100 img-fluid rounded-5" />
-                    <div class="inner-heading">
-                        <h2>About Us</h2>
-                        <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
-                            <li><a routerLink="/">Home</a></li>
-                            <li><img [src]="'assets/images/breadcumb.svg'" /></li>
-                            <li><a routerLink="/">About</a></li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="inner-baner-dtl position-relative text-center">
+            <!-- Dynamic Banner Image -->
+            <img [src]="'http://165.22.223.163:8000' + banner.image_url" class="w-100 img-fluid rounded-5" />
+            <div class="inner-heading">
+              <h2>{{ banner.title }}</h2>
+              <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
+                <li><a routerLink="/">Home</a></li>
+                <li><img src="assets/images/breadcumb.svg" /></li>
+                <li><a routerLink="/about">{{ banner.name }}</a></li>
+              </ul>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</section>
+  </section>  
 <section class="about-us about-main ptc-80">
     <div class="container">
         <div class="row">
