--- a/src/app/pages/associate-hospital/associate-hospital.html
+++ b/src/app/pages/associate-hospital/associate-hospital.html
@@ -1,22 +1,22 @@
-<section class="inner-banner">
+<section class="inner-banner" *ngIf="banner">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="inner-baner-dtl position-relative text-center">
-                    <img [src]="'assets/images/associate-hospital.png'" class="w-100 img-fluid rounded-5" />
-                    <div class="inner-heading">
-                        <h2>Associate Hospital</h2>
-                        <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
-                            <li><a href="/">Home</a></li>
-                            <li><img [src]="'assets/images/breadcumb.svg'"></li>
-                            <li><a href="/">Associate Hospital</a></li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="inner-baner-dtl position-relative text-center">
+            <img [src]="'http://165.22.223.163:8000' + banner.image_url" class="w-100 img-fluid rounded-5" />
+            <div class="inner-heading">
+              <h2>{{ banner.title }}</h2>
+              <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
+                <li><a routerLink="/">Home</a></li>
+                <li><img src="assets/images/breadcumb.svg" /></li>
+                <li><a routerLink="/associate-hospital">{{ banner.name }}</a></li>
+              </ul>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 <section class="card-list-main ptc-80">
     <div class="container">
         <div class="row justify-content-center">
