--- a/src/app/pages/attractions/attractions.html
+++ b/src/app/pages/attractions/attractions.html
@@ -70,35 +70,102 @@
                 </div>
             </div>
             <div class="col-lg-8">
-                <div class="blog-card">
-                    <!-- Featured image -->
-                    <div class="blog-dtl-img">
-                        <img [src]="'assets/images/attractions1.png'" class="w-100 img-fluid rounded-4"/>
+                <!-- Loading State -->
+                <div *ngIf="loading" class="text-center py-5">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading content...</span>
+                    </div>
+                    <p class="mt-2">Loading special offers and articles...</p>
+                </div>
+
+                <!-- No Content State -->
+                <div *ngIf="!loading && offers.length === 0 && blogs.length === 0" class="text-center py-5">
+                    <h5>No content available at the moment</h5>
+                    <p class="text-muted">Please check back later for exciting medical tourism offers and articles.</p>
+                    <!-- Debug Info -->
+                    <div class="mt-3">
+                        <small class="text-info">Debug: Offers loaded: {{ offersLoaded }}, Blogs loaded: {{ blogsLoaded }}</small><br>
+                        <small class="text-info">Offers count: {{ offers.length }}, Blogs count: {{ blogs.length }}</small>
+                    </div>
+                </div>
+
+                <!-- Dynamic Offers -->
+                <div class="blog-card" *ngFor="let offer of offers">
+                    <!-- Featured Image -->
+                    <div class="blog-dtl-img position-relative">
+                        <img [src]="getOfferImageUrl(offer)" 
+                             [alt]="offer.name" 
+                             class="w-100 img-fluid rounded-4"
+                             (error)="$event.target.src='assets/images/attractions1.png'"/>
+                        
+                        <!-- Discount Badge -->
+                        <div class="position-absolute top-0 end-0 m-3">
+                            <span class="badge bg-danger fs-6 px-3 py-2">
+                                {{ offer.discount_percentage }}% OFF
+                            </span>
+                        </div>
                     </div>
 
                     <div class="blog-card-dtl">
                         <!-- Title -->
-                        <h4>Blood Cancers: Early Signs, Symptoms, Institute</h4>
-                        <!-- Main content (HTML from API) -->
+                        <h4>{{ offer.name }}</h4>
+                        
+                        <!-- Offer Details -->
+                        <!-- <div class="offer-meta mb-3">
+                            <div class="d-flex align-items-center mb-2" *ngIf="offer.location">
+                                <i class="fas fa-map-marker-alt text-primary me-2"></i>
+                                <small class="text-muted">{{ offer.location }}</small>
+                            </div>
+                            <div class="d-flex align-items-center mb-2">
+                                <i class="fas fa-calendar-alt text-primary me-2"></i>
+                                <small class="text-muted">
+                                    Valid: {{ formatDate(offer.start_date) }} - {{ formatDate(offer.end_date) }}
+                                </small>
+                            </div>
+                            <div class="d-flex align-items-center" *ngIf="offer.is_free_camp">
+                                <i class="fas fa-gift text-success me-2"></i>
+                                <small class="text-success fw-bold">Free Medical Camp</small>
+                            </div>
+                        </div> -->
+
+                        <!-- Description -->
                         <div class="blog-dtl attractions-detail">
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                            <a href="/contact" class="btn-default mt-3">Connect <i class="fa-solid fa-arrow-up"></i></a>
+                            <p>{{ offer.description }}</p>
+                            <a [routerLink]="['/attractions-detail', offer.id]" class="btn-default mt-3">
+                                Read More <i class="fa-solid fa-arrow-up"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="blog-card">
-                    <!-- Featured image -->
+
+                <!-- Dynamic Blog Cards -->
+                <div class="blog-card" *ngFor="let blog of blogs">
+                    <!-- Featured Image -->
                     <div class="blog-dtl-img">
-                        <img [src]="'assets/images/attractions1.png'" class="w-100 img-fluid rounded-4"/>
+                        <img [src]="getBlogImageUrl(blog)" 
+                             [alt]="blog.title" 
+                             class="w-100 img-fluid rounded-4"
+                             (error)="$event.target.src='assets/images/attractions1.png'"/>
                     </div>
 
                     <div class="blog-card-dtl">
                         <!-- Title -->
-                        <h4>Blood Cancers: Early Signs, Symptoms, Institute</h4>
-                        <!-- Main content (HTML from API) -->
+                        <h4>{{ blog.title }}</h4>
+                        
+                        <!-- Blog Meta -->
+                        <div class="blog-meta mb-3">
+                            <div class="d-flex align-items-center mb-2">
+                                <i class="fas fa-calendar-alt text-primary me-2"></i>
+                                <small class="text-muted">Published: {{ formatBlogDate(blog.published_at) }}</small>
+                            </div>
+                        </div>
+
+                        <!-- Excerpt -->
                         <div class="blog-dtl attractions-detail">
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                            <a href="/contact" class="btn-default mt-3">Connect <i class="fa-solid fa-arrow-up"></i></a>
+                            <p>{{ blog.excerpt }}</p>
+                            <a [routerLink]="['/blog', blog.id]" class="btn-default mt-3">
+                                Read More <i class="fa-solid fa-arrow-up"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
