--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
@@ -177,7 +177,34 @@
                 <div class="col-lg-4">
                     <img [src]="'assets/images/packages-main.png'" class="img-fluid w-100 rounded-4 mt-2">
                 </div>
+            </div> -->
+            <!-- Nawab -->
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6" *ngFor="let treatment of treatments; let i = index">
+                            <div class="package-box position-relative">
+                                <div class="package-title d-flex align-items-center">
+                                    <!-- Static images -->
+                                    <img [src]="'assets/images/packages' + (i + 1) + '.svg'">
+                                    <h5 class="mb-0">{{ treatment.name }}</h5>
+                                </div>
+                                <p class="mb-0">{{ treatment.long_description }}</p>
+                                <a [routerLink]="['/treatment-detail/', treatment.id]">
+                                    <img [src]="'assets/images/packages-detail.svg'">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <img [src]="'assets/images/packages-main.png'" class="img-fluid w-100 rounded-4 mt-2">
+                </div>
             </div>
+
+            <!-- Nawab -->
+
         </div>
     </section>
     <section class="web-info ptc-80">
@@ -229,10 +256,14 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container" *ngIf="partners.length > 0">
             <div class="row">
-                <div class="col-lg-12">
-                    <img [src]="'assets/images/hospital-logo.png'" class="img-fluid w-100">
+                <div class="col-lg-2 col-md-4 col-sm-6" *ngFor="let partner of partners">
+                    <div class="partner-logo h-100">
+                        <img [src]="partnerService.getFullLogoUrl(partner.logo_url)" [alt]="partner.name"
+                            class="img-fluid">
+                        <!-- <p>{{ partner.name }}</p> -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -250,57 +281,40 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="client-feedback">
-                        <owl-carousel-o [options]="customOptions">
-                            <ng-template carouselSlide>
-                                <div class="feedback-card">
-                                    <img [src]="'assets/images/rating-star.svg'">
-                                    <p>My first appointment, but the staff was so welcoming. They took the time to listen to my concerns and made sure I felt comfortable.</p>
-                                    <hr>
-                                    <div class="feedback-profile d-flex align-items-center">
-                                        <img [src]="'assets/images/profile1.png'">
-                                        <h6>Brooklyn Simmons</h6>
-                                    </div>
-                                </div>
-                            </ng-template>
-                            <ng-template carouselSlide>
-                                <div class="feedback-card">
-                                    <img [src]="'assets/images/rating-star.svg'">
-                                    <p>My first appointment, but the staff was so welcoming. They took the time to listen to my concerns and made sure I felt comfortable.</p>
-                                    <hr>
-                                    <div class="feedback-profile d-flex align-items-center">
-                                        <img [src]="'assets/images/profile2.png'">
-                                        <h6>Brooklyn Simmons</h6>
-                                    </div>
-                                </div>
-                            </ng-template>
-                            <ng-template carouselSlide>
-                                <div class="feedback-card">
-                                    <img [src]="'assets/images/rating-star.svg'">
-                                    <p>My first appointment, but the staff was so welcoming. They took the time to listen to my concerns and made sure I felt comfortable.</p>
-                                    <hr>
-                                    <div class="feedback-profile d-flex align-items-center">
-                                        <img [src]="'assets/images/profile1.png'">
-                                        <h6>Brooklyn Simmons</h6>
-                                    </div>
-                                </div>
-                            </ng-template>
-                            <ng-template carouselSlide>
-                                <div class="feedback-card">
-                                    <img [src]="'assets/images/rating-star.svg'">
-                                    <p>My first appointment, but the staff was so welcoming. They took the time to listen to my concerns and made sure I felt comfortable.</p>
-                                    <hr>
-                                    <div class="feedback-profile d-flex align-items-center">
-                                        <img [src]="'assets/images/profile2.png'">
-                                        <h6>Brooklyn Simmons</h6>
-                                    </div>
-                                </div>
-                            </ng-template>
-                        </owl-carousel-o>
-
-                    </div>
+                  <div class="client-feedback" *ngIf="patientStories.length">
+                    <owl-carousel-o [options]="customOptions">
+                      <ng-template carouselSlide *ngFor="let story of patientStories">
+                        <div class="feedback-card p-3">
+                          
+                          <!-- Dynamic Rating Stars -->
+                          <div class="user-card-rating d-flex align-items-center">
+                            <ng-container *ngFor="let star of getStars(story.rating)">
+                              <!-- Full star -->
+                              <i *ngIf="star === 'full'" class="fa fa-star text-warning"></i>
+                              <!-- Half star -->
+                              <i *ngIf="star === 'half'" class="fa fa-star-half-alt text-warning"></i>
+                              <!-- Empty star -->
+                              <i *ngIf="star === 'empty'" class="fa-regular fa-star text-warning"></i>
+                            </ng-container>
+                          </div>
+              
+                          <!-- Patient Description -->
+                          <p>{{ story.description | slice:0:200 }}...</p>
+                          <hr>
+              
+                          <!-- Profile Photo & Name -->
+                          <div class="feedback-profile d-flex align-items-center">
+                            <img [src]="'http://165.22.223.163:8000' + story.profile_photo" alt="{{ story.patient_name }}" class="me-2 rounded-circle" width="50" height="50">
+                            <h6 class="mb-0">{{ story.patient_name }}</h6>
+                          </div>
+              
+                        </div>
+                      </ng-template>
+                    </owl-carousel-o>
+                  </div>
                 </div>
-            </div>
+              </div>
+              
         </div>
     </section>
 </div>
