--- a/src/app/pages/online-consultation/online-consultation.css
+++ b/src/app/pages/online-consultation/online-consultation.css
@@ -13,8 +13,8 @@
 .book-package-form form textarea
 {
     padding: 15px;
-    font-size: 14px;
-    color: #676767;
+    font-size: 16px;
+    color: #0e0e0e;
     border: none;
     box-shadow: none;
     border: 1px solid #DDDDDD;
@@ -41,4 +41,8 @@
 .book-package button.btn-default
 {
     padding: 10px 20px;
+}
+.invalid-feedback
+{
+    text-transform: capitalize;
 }
