--- a/src/app/pages/treatments/treatments.html
+++ b/src/app/pages/treatments/treatments.html
@@ -1,15 +1,15 @@
-<section class="inner-banner">
+<section class="inner-banner" *ngIf="banner">
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
         <div class="inner-baner-dtl position-relative text-center">
-          <img [src]="'assets/images/surgical-treatment.png'" class="w-100 img-fluid rounded-5" />
+          <img [src]="'http://165.22.223.163:8000' + banner.image_url" class="w-100 img-fluid rounded-5" />
           <div class="inner-heading">
-            <h2>Treatments Plan</h2>
+            <h2>{{ banner.title }}</h2>
             <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
-              <li><a href="/">Home</a></li>
-              <li><img [src]="'assets/images/breadcumb.svg'"></li>
-              <li><a href="/">Surgical Treatment Plan</a></li>
+              <li><a routerLink="/">Home</a></li>
+              <li><img src="assets/images/breadcumb.svg" /></li>
+              <li><a routerLink="/treatments">{{ banner.name }}</a></li>
             </ul>
           </div>
         </div>
@@ -34,13 +34,12 @@
     </div>
 
     <!-- Filters -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="tret-filter-main d-flex align-items-center">
         <div class="tret-filter">
           <h4 class="mb-0">Select Treatments</h4>
         </div>
         <div class="filter-option d-flex gap-3">
-          <!-- Location Filter -->
           <select class="form-select" [(ngModel)]="selectedLocation" (change)="applyFilters()">
             <option value="">Change Location</option>
             <option *ngFor="let loc of availableLocations" [value]="loc">
@@ -48,13 +47,58 @@
             </option>
           </select>
 
-          <!-- Treatment Filter -->
           <select class="form-select" [(ngModel)]="selectedTreatmentType" (change)="applyFilters()">
             <option value="">Change Treatment</option>
             <option *ngFor="let type of availableTreatmentTypes" [value]="type">
               {{ type }}
             </option>
           </select>
+        </div>
+      </div>
+    </div> -->
+    <div class="row">
+      <div class="tret-filter-main d-flex align-items-center">
+        <div class="tret-filter">
+          <h4 class="mb-0">Select Treatments</h4>
+        </div>
+        <div class="filter-option d-flex gap-3">
+          <!-- Location Filter -->
+          <div class="custom-select-wrapper">
+            <div class="form-select" [class.open]="isLocationOpen" (click)="toggleLocationDropdown()">
+              <span>{{ selectedLocation || 'Change Location' }}</span>
+              <!-- <span class="arrow" [class.open]="isLocationOpen">▼</span> -->
+            </div>
+            <div class="select-dropdown" *ngIf="isLocationOpen">
+              <div class="select-option" (click)="selectLocation('')">
+                Change Location
+              </div>
+              <div class="select-option" 
+                  *ngFor="let loc of availableLocations"
+                  [class.selected]="selectedLocation === loc"
+                  (click)="selectLocation(loc)">
+                {{ loc }}
+              </div>
+            </div>
+          </div>
+
+          <!-- Treatment Filter -->
+          <div class="custom-select-wrapper">
+            <div class="form-select" [class.open]="isTreatmentOpen" (click)="toggleTreatmentDropdown()">
+              <span>{{ selectedTreatmentType || 'Change Treatment' }}</span>
+              <!-- <span class="arrow" [class.open]="isTreatmentOpen">▼</span> -->
+            </div>
+            <div class="select-dropdown" *ngIf="isTreatmentOpen">
+              <div class="select-option" (click)="selectTreatment('')">
+                Change Treatment
+              </div>
+              <div class="select-option" 
+                  *ngFor="let type of availableTreatmentTypes"
+                  [class.selected]="selectedTreatmentType === type"
+                  (click)="selectTreatment(type)">
+                {{ type }}
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
