--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -170,6 +170,10 @@
     font-family: 'Lexend-Regular';
     color: var(--secondary-color);
     font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 30px;
 }
 
 .package-title img {
@@ -213,6 +217,11 @@
 
 .package-box p {
     font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .package-box a img {
@@ -271,19 +280,26 @@
 }
 
 .feedback-card p {
-    color: var(--info-color);
+    color: #000;
     font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .feedback-profile img {
-    width: 48px !important;
+    height: 50px;
+    object-fit: cover;
+    width: 50px !important;
     margin-bottom: 0px;
 }
 
 .feedback-profile h6 {
     font-size: 16px;
     margin-bottom: 0px;
-    margin-left: 12px;
+    margin-left: 8px;
 }
 
 .feedback-card {
@@ -447,7 +463,7 @@
 
 .user-card-rating {
     gap: 3px;
-    margin: 10px 0px;
+    margin-bottom: 15px;
 }
 
 .faq-head p {
@@ -528,8 +544,9 @@
 }
 
 .dtl-doctor-img img {
-    width: 93px;
-    height: 93px;
+    width: 75px;
+    height: 75px;
+    max-width: 75px;
     object-fit: cover;
     object-position: center;
     border-radius: 8px;
@@ -653,11 +670,13 @@
 .contact-form-inner form textarea
 {
     padding: 15px;
-    font-size: 14px;
-    color: #676767;
+    font-size: 16px;
+    color: #0e0e0e;
     border: none;
     box-shadow: none;
     border: 1px solid #DDDDDD;
+    box-shadow: none !important;
+    outline: none !important;
 }
 .contact-form-inner form input::placeholder
 {
@@ -684,7 +703,7 @@
 }
 .contact-form-inner form select
 {
-    color: #AEAEAE;
+    color: #0e0e0e;
 }
 .contact-form-inner h5
 {
@@ -740,7 +759,7 @@
 {
     color: #B4B4B4;
     position: absolute;
-    top: 15px;
+    top: 12px;
     right: 20px;
     font-size: 22px;
     line-height: normal;
@@ -814,8 +833,15 @@
 .filter-option select
 {
     color: #AEAEAE;
+    box-shadow: none !important;
+    outline: none !important;
     padding: 10px 35px 10px 10px;
     min-width: 200px;
+}
+.filter-option select option:hover
+{
+    color: #fff !important;
+    background-color: #0e99ff !important;
 }
 .tret-filter-main
 {
@@ -960,6 +986,10 @@
     {
         margin-top: 25px;
         margin-bottom: 0px;
+    }
+    .banner-offer p
+    {
+        font-size: 16px;
     }
     .oue-vision
     {
